Add channel provider job execution
